--- a/bionic/Vagrantfile
+++ b/bionic/Vagrantfile
@@ -2,5 +2,6 @@ Vagrant.configure("2") do |config|
   config.vm.boot_timeout = 1800 # 30 minutes
   config.vm.box = "ubuntu/bionic64"
   config.vm.network "forwarded_port", guest: 80, host: 8080
-  config.vm.network "private_network", ip: "192.168.50.4"
+  #config.vm.network "private_network", ip: "192.168.50.4"
+  config.vm.network "private_network", type: "dhcp"
 end
