--- a/bionic/Vagrantfile
+++ b/bionic/Vagrantfile
@@ -3,9 +3,13 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
   config.vm.network "forwarded_port", guest: 80, host: 8080
   #config.vm.network "private_network", ip: "192.168.50.4"
-  config.vm.network "private_network", type: "dhcp"
+  #config.vm.network "private_network", type: "dhcp"
   #config.vm.network "public_network"
   #config.vm.network "public_network", ip: "192.168.1.24"
+  config.vm.provision "shell", inline: "echo Hello, World >> hello.txt"
+  #config.vm.provision "shell", inline: "cat /configs/id_bionic.pub >> .ssh/authorized_keys" #depois testar essa linha
+  config.vm.synced_folder "./configs", "/configs"
+  config.vm.synced_folder ".", "/vagrant", disabled: true
   config.vm.provider "virtualbox" do |vb|
      vb.gui = true
   end
